added the resource checker tool